# Material-Editor

./: CMakeLists.txt  README.md
configuration/: filesystem.cpp.in  filesystem.h.in
includes/: imgui.ini  stb_image_write.h  tinydir.h
includes/GLFW/: glfw3.h
includes/assimp/: camera.h
includes/core/: GL_utils.cpp  GL_utils.h  LoadFiles.cpp  LoadFiles.h  camera.cpp  camera.h  cloth_simulation.cpp  cloth_simulation.h  filesystem.cpp  globalVariables.h  mesh.h  model.h  precompute.cpp  precompute.h  renderscene.cpp  renderscene.h  shader.h  shading_model.cpp  shading_model.h
includes/imgui/: ImGuizmo.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h
resources/objects/Klee/: Klee.fbx
resources/objects/mesh/Klee/: Klee0.txt  Klee3.txt
resources/objects/mesh/backpack/: backpack0.txt  backpack10.txt  backpack11.txt  backpack13.txt  backpack14.txt  backpack15.txt  backpack16.txt  backpack17.txt  backpack18.txt  backpack19.txt  backpack2.txt  backpack20.txt  backpack25.txt  backpack26.txt  backpack3.txt  backpack32.txt  backpack35.txt  backpack37.txt  backpack39.txt  backpack42.txt  backpack45.txt  backpack46.txt  backpack47.txt  backpack48.txt  backpack49.txt  backpack52.txt  backpack54.txt  backpack60.txt  backpack61.txt  backpack62.txt  backpack64.txt  backpack66.txt  backpack68.txt  backpack69.txt  backpack7.txt  backpack70.txt  backpack71.txt  backpack74.txt  backpack76.txt  backpack77.txt  (+3 more)
resources/objects/mesh/material_sphere/: material_sphere0.txt  material_sphere1.txt
resources/objects/mesh/teapot/: teapot0.txt
resources/textures/precompute/circus/: IBLLightPosition.hdr  irradianceMap.hdr
resources/textures/precompute/door/: IBLLightPosition.hdr  irradianceMap.hdr
resources/textures/precompute/factory/: IBLLightPosition.hdr  irradianceMap.hdr
resources/textures/precompute/forest/: IBLLightPosition.hdr  irradianceMap.hdr
resources/textures/precompute/helipad/: IBLLightPosition.hdr  irradianceMap.hdr
resources/textures/precompute/winter/: IBLLightPosition.hdr  irradianceMap.hdr
src/: main.cpp
src/shader/: background_fs.glsl  background_vs.glsl  brdf_fs.glsl  clearcoat_fs.glsl  cloth_pbr_fs.glsl  cubemap_to_equirectangular_fs.glsl  depth_fs.glsl  depth_vs.glsl  equirectangular_to_cubemap_fs.glsl  hdrtexture_fs.glsl  hdrtexture_light_fs.glsl  hdrtexture_vs.glsl  irradiance_convolution_fs.glsl  pbr_fs.glsl  pbr_vs.glsl  point_light_fs.glsl  prefilter_clearcoat_fs.glsl  prefilter_cloth_fs.glsl  prefilter_fs.glsl
